2011-03-18  Alan Modra  <amodra@gmail.com>

	* config/obj-elf.c (elf_frob_symbol): Report S_SET_SIZE symbol
	on .size expression errors rather than symbols in the size expression.

	Backport 2011-03-16  H.J. Lu  <hongjiu.lu@intel.com>
	* as.c (show_usage): Add --size-check=.
	(parse_args): Add and handle OPTION_SIZE_CHECK.
	* as.h (flag_size_check): New.
	* config/obj-elf.c (elf_frob_symbol): Use as_bad to report
	bad .size directive only for --size-check=error.
	* doc/as.texinfo: Document --size-check=.

2011-03-17  Alan Modra  <amodra@gmail.com>

	PR 12569
	* expr.c (operand): Correct passing of "mode" to expr.
	* read.c (do_org): Allow expr_section.
	(get_known_segmented_expression): Don't assert anything about the
	segment.

2011-03-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2010-12-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR gas/11395
	* config/tc-hppa.c (pa_ip): Set doubleword carry/borrow bit when a
	doubleword completer or doubleword condition is found in an add/sub
	instruction.  Reject match for 'A'/'S' only if there is no condition
	and d bit is not set.

2011-02-28  Alan Modra  <amodra@gmail.com>

	* symbols.c (report_op_error): Remove unnecessary forward declaration.
	Add "op" parameter.  Report operator and operand segments in error
	message, not operand symbols.
	(resolve_symbol_value): Always set segment for equated symbols, not
	just when finalizing.  Adjust report_op_error calls.

2011-02-25  Alan Modra  <amodra@gmail.com>

	PR gas/12519
	* config/obj-elf.c (elf_frob_symbol): Properly handle size expression.

2011-02-01  Alan Modra  <amodra@gmail.com>

	Backport from mainline
	2011-01-01  H.J. Lu  <hongjiu.lu@intel.com>
	* gas.c (parse_args): Update copyright to 2011.

	2010-12-16  Maciej W. Rozycki  <macro@codesourcery.com>
	* symbols.c (symbol_clone_if_forward_ref): Call tc_new_dot_label
	for new fake labels created off the dot special symbol.
	* config/tc-mips.h (tc_new_dot_label): New macro.