@@ -2,7 +2,6 @@
 @c Free Software Foundation, Inc.
 @c This is part of the GAS manual.
 @c For copying conditions, see the file as.texinfo.
-@c man end
 @ifset GENERIC
 @page
 @node PPC-Dependent
@@ -17,7 +16,6 @@
 @menu
 * PowerPC-Opts::                Options
 * PowerPC-Pseudo::              PowerPC Assembler Directives
-* PowerPC-Syntax::              PowerPC Syntax
 @end menu
 
 @node PowerPC-Opts
@@ -35,8 +33,7 @@ reference manual.
 
 The following table lists all available PowerPC options.
 
-@c man begin OPTIONS
-@table @gcctabopt
+@table @code
 @item -a32
 Generate ELF32 or XCOFF32.
 
@@ -164,7 +161,6 @@ Do not generate code for Solaris.
 If an alignment directive inserts more than @var{count} nops, put a
 branch at the beginning to skip execution of the nops.
 @end table
-@c man end
 
 
 @node PowerPC-Pseudo
@@ -183,33 +179,3 @@ generated.  @code{"string"} may be any of the -m cpu selection options
 @code{"pop"}.  @code{.machine "push"} saves the currently selected
 cpu, which may be restored with @code{.machine "pop"}.
 @end table
-
-@node PowerPC-Syntax
-@section PowerPC Syntax
-@menu
-* PowerPC-Chars::                Special Characters
-@end menu
-
-@node PowerPC-Chars
-@subsection Special Characters
-
-@cindex line comment character, PowerPC
-@cindex PowerPC line comment character
-The presence of a @samp{#} on a line indicates the start of a comment
-that extends to the end of the current line.
-
-If a @samp{#} appears as the first character of a line then the whole
-line is treated as a comment, but in this case the line could also be
-a logical line number directive (@pxref{Comments}) or a preprocessor
-control command (@pxref{Preprocessing}).
-
-If the assembler has been configured for the ppc-*-solaris* target
-then the @samp{!} character also acts as a line comment character.
-This can be disabled via the @option{-mno-solaris} command line
-option.
-
-@cindex line separator, PowerPC
-@cindex statement separator, PowerPC
-@cindex PowerPC line separator
-The @samp{;} character can be used to separate statements on the same
-line.
